changing up the site

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Interior work
+                  Exterior work
                 </h5>
                 <p>
                   alteration in some form, by injected humour, or randomised words which don't look even slightly
