--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
+  <meta property="og:image" content="https://storage.googleapis.com/portfolio-yassine/jcs-cover.png" />
   <meta name="author" content="" />
 
   <title>JCS Homes LLC - Shenandoah Remodeling</title>
