--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
+                  <a class="nav-link" href="#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="#about"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="project.html">Project</a>
+                  <a class="nav-link" href="#whyus">Project</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="testimonial.html">Testimonial</a>
+                  <a class="nav-link" href="#testimonial">Testimonial</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
               </ul>
               <div class="quote_btn-container">
@@ -85,7 +85,7 @@
     </header>
     <!-- end header section -->
     <!-- slider section -->
-    <section class="slider_section ">
+    <section id="home" class="slider_section ">
       <div class="overlay_container">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -150,7 +150,7 @@
 
   <!-- service section -->
 
-  <section class="service_section layout_padding">
+  <section id="services" class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
         <div class="heading_container">
@@ -252,7 +252,7 @@
 
   <!-- about section -->
 
-  <section class="about_section">
+  <section id="about" class="about_section">
     <div class="container  ">
       <div class="row">
         <div class="col-md-6">
@@ -286,7 +286,7 @@
 
   <!-- project section -->
 
-  <section class="project_section layout_padding">
+  <!-- <section id="projects" class="project_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -407,12 +407,12 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end project section -->
 
   <!-- client section -->
-  <section class="client_section layout_padding">
+  <section id="testimonial" class="client_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -539,7 +539,7 @@
 
   <!-- why us section -->
 
-  <section class="why_us_section layout_padding">
+  <section id="whyus" class="why_us_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -598,7 +598,7 @@
   <!-- end why us section -->
 
   <!-- contact section -->
-  <section class="contact_section layout_padding-bottom">
+  <section id="contact" class="contact_section layout_padding-bottom">
     <div class="container-fluid">
       <div class="col-lg-4 col-md-5 offset-md-1">
         <div class="heading_container">
@@ -676,12 +676,12 @@
                 QUICK LINKS
               </h4>
               <div class="info_links_menu">
-                <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="" href="service.html">Services</a>
-                <a class="" href="about.html"> About</a>
-                <a class="" href="project.html">Project</a>
-                <a class="" href="testimonial.html">Testimonial</a>
-                <a class="" href="contact.html">Contact Us</a>
+                <a class="" href="#home">Home <span class="sr-only">(current)</span></a>
+                <a class="" href="#services">Services</a>
+                <a class="" href="#about"> About</a>
+                <a class="" href="#whyus">Project</a>
+                <a class="" href="#testimonial">Testimonial</a>
+                <a class="" href="#contact">Contact Us</a>
               </div>
             </div>
           </div>
