removing dummy data

--- a/index.html
+++ b/index.html
@@ -169,13 +169,11 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Painting & Interior
+                  Painting & Drywall
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
+                  Enhance your home's interior with our professional painting and remodeling services. We ensure a high-quality finish that complements your style and elevates your space.
+                </p>                
                 <a href="">
                   Read More
                 </a>
@@ -189,13 +187,11 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Windows & Doors
+                  Kitchen & Bath
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
-                </p>
+                  We offer comprehensive kitchen and bathroom remodeling services, transforming your space with custom designs, quality materials, and expert craftsmanship.
+                </p>                
                 <a href="">
                   Read More
                 </a>
@@ -212,9 +208,7 @@
                   Flooring & Tile
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
+                  With our flooring and tile services, you can enhance your home's interior with beautiful, durable materials that stand the test of time. We offer a range of flooring options to suit your style and budget.
                 </p>
                 <a href="">
                   Read More
@@ -229,12 +223,10 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Exterior & Additions
+                  Exterior Renovations
                 </h5>
                 <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using L
+                  Our exterior renovation services are designed to enhance your home's curb appeal and protect your property from the elements. We offer a range of services to improve your home's exterior, including siding, roofing, windows, and doors.
                 </p>
                 <a href="">
                   Read More
