cleaning up jcs site

--- a/index.html
+++ b/index.html
@@ -406,127 +406,111 @@
   <!-- client section -->
   <section id="testimonial" class="client_section layout_padding">
     <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Testimonial
-        </h2>
-      </div>
+        <div class="heading_container heading_center">
+            <h2>
+                What Our Clients Say
+            </h2>
+        </div>
     </div>
     <div id="customCarousel2" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="client_info">
-                      <div class="client_name">
-                        <h5>
-                          Morojink
-                        </h5>
-                        <h6>
-                          Customer
-                        </h6>
-                      </div>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
+        <div class="carousel-inner">
+            <!-- Review 1 -->
+            <div class="carousel-item active">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10 mx-auto">
+                            <div class="box">
+                                <div class="img-box">
+                                </div>
+                                <div class="detail-box">
+                                    <div class="client_info">
+                                        <div class="client_name">
+                                            <h5>
+                                                Bradley Russell
+                                            </h5>
+                                            <h6>
+                                                Winchester, VA
+                                            </h6>
+                                        </div>
+                                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    </div>
+                                    <p>
+                                        "Top notch for drywall, flooring and painting. Worked with them on many projects. Would really recommend them for any home improvement project."
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
-                    </p>
-                  </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="client_info">
-                      <div class="client_name">
-                        <h5>
-                          Morojink
-                        </h5>
-                        <h6>
-                          Customer
-                        </h6>
-                      </div>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
+            <!-- Review 2 -->
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10 mx-auto">
+                            <div class="box">
+                                <div class="img-box">
+
+                                </div>
+                                <div class="detail-box">
+                                    <div class="client_info">
+                                        <div class="client_name">
+                                            <h5>
+                                                Yassine Elmellouki
+                                            </h5>
+                                            <h6>
+                                                Leeburg, VA
+                                            </h6>
+                                        </div>
+                                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    </div>
+                                    <p>
+                                        "JCS Homes LLC has done great work for us - we have had them do painting as well bathroom remodeling. Carlos was always great and very communicative!"
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
-                    </p>
-                  </div>
                 </div>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-10 mx-auto">
-                <div class="box">
-                  <div class="img-box">
-                    <img src="images/client.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <div class="client_info">
-                      <div class="client_name">
-                        <h5>
-                          Morojink
-                        </h5>
-                        <h6>
-                          Customer
-                        </h6>
-                      </div>
-                      <i class="fa fa-quote-left" aria-hidden="true"></i>
+            <!-- Review 3 -->
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10 mx-auto">
+                            <div class="box">
+                                <div class="img-box">
+                                </div>
+                                <div class="detail-box">
+                                    <div class="client_info">
+                                        <div class="client_name">
+                                            <h5>
+                                                Google User
+                                            </h5>
+                                            <h6>
+                                                Arlington, VA
+                                            </h6>
+                                        </div>
+                                        <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    </div>
+                                    <p>
+                                        "Working with JCS Homes LLC was such a great experience! They really understood what we were looking for and brought our vision to life. The team was friendly, reliable, and kept us in the loop the whole time. We absolutely love the final result!!"
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore
-                      et
-                      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                      aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                      cillum
-                      dolore eu fugia
-                    </p>
-                  </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-      <ol class="carousel-indicators">
-        <li data-target="#customCarousel2" data-slide-to="0" class="active"></li>
-        <li data-target="#customCarousel2" data-slide-to="1"></li>
-        <li data-target="#customCarousel2" data-slide-to="2"></li>
-      </ol>
+        <ol class="carousel-indicators">
+            <li data-target="#customCarousel2" data-slide-to="0" class="active"></li>
+            <li data-target="#customCarousel2" data-slide-to="1"></li>
+            <li data-target="#customCarousel2" data-slide-to="2"></li>
+        </ol>
     </div>
-  </section>
+</section>
+
   <!-- end client section -->
 
   <!-- why us section -->
@@ -626,7 +610,7 @@
         <div class="col-lg-7 col-md-6 px-0">
           <div class="map_container">
             <div class="map">
-              <div id="googleMap"></div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2641.4468655982864!2d-78.14703478360654!3d39.160538877326616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b5efb005adb01b%3A0xff18ca75bdee10fa!2sJCS%20Homes%20LLC!5e0!3m2!1sen!2sus!4v1735791059953!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
