--- a/index.html
+++ b/index.html
@@ -586,8 +586,9 @@
       <div class="row">
         <div class="col-lg-4 col-md-5 offset-md-1">
           <div class="form_container">
-            <form id="contactForm">
-      
+            <form action="https://api.web3forms.com/submit" method="POST">
+
+              <input type="hidden" name="access_key" id="accessKey">
               <div>
                 <input type="text" name="name" required placeholder="Name" />
               </div>
@@ -601,13 +602,13 @@
                 <input type="text" class="message-box" name="message" placeholder="Message" />
               </div>
               <div class="btn_box">
-                <button type="submit">SEND</button>
+                <button type="submit">
+                  SEND
+                </button>
               </div>
             </form>
           </div>
         </div>
-      </div>
-      
         <div class="col-lg-7 col-md-6 px-0">
           <div class="map_container">
             <div class="map">
@@ -766,33 +767,14 @@
   </script>
   <!-- End Google Map -->
   <script>
-    document.getElementById("contactForm").addEventListener("submit", async function (event) {
-      event.preventDefault(); // Prevent default form submission
-  
-      const formData = new FormData(this);
-      const data = Object.fromEntries(formData.entries());
-  
-      try {
-        const response = await fetch("/.netlify/functions/submitForm", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(data),
-        });
-  
-        const result = await response.json();
-  
-        if (response.ok) {
-          alert("Form submitted successfully!");
-        } else {
-          alert(`Error: ${result.error}`);
-        }
-      } catch (error) {
-        console.error("Error submitting form:", error);
-        alert("An error occurred. Please try again.");
-      }
-    });
+    fetch('/.netlify/functions/getAccessKey')
+    .then(response => response.json())
+    .then(data => {
+      document.getElementById('accessKey').value = data.accessKey;
+    })
+    .catch(error => console.error('Error fetching access key:', error));
+
   </script>
-  
 
 </body>
 
