--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   <!-- Hero Section -->
   <section id="home" class="hero-section">
     <div class="hero-overlay"></div>
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
+    <div class="container position-relative z-index-1">
+      <div class="row align-items-center">
         <div class="col-lg-8 text-white" data-aos="fade-right" data-aos-duration="1000">
           <h1 class="display-3 fw-bold mb-4">HOME REMODELING SERVICES</h1>
           <p class="lead mb-5">Transform your space with our expert remodeling services in the Shenandoah Valley</p>
